--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 server.port=9090
-spring.data.mongodb.uri=mongodb+srv://test:test@theonlycluster-5tfzf.mongodb.net/test?retryWrites=true
-spring.data.mongodb.database=dungeon-dragons
+#spring.data.mongodb.uri=mongodb+srv://test:test@theonlycluster-5tfzf.mongodb.net/test?retryWrites=true
+#spring.data.mongodb.database=dungeon-dragons
