--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 plugins {
-    id 'org.jetbrains.kotlin.plugin.jpa' version '1.2.71'
+    id 'org.jetbrains.kotlin.plugin.jpa' version '1.3.30'
     id 'org.springframework.boot' version '2.1.4.RELEASE'
-    id 'org.jetbrains.kotlin.jvm' version '1.2.71'
-    id 'org.jetbrains.kotlin.plugin.spring' version '1.2.71'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.30'
+    id 'org.jetbrains.kotlin.plugin.spring' version '1.3.30'
 }
 
 apply plugin: 'io.spring.dependency-management'
@@ -17,13 +17,14 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    runtimeOnly 'com.h2database:h2'
-//	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+//    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
+    runtimeOnly 'org.postgresql:postgresql'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+//    testImplementation 'org.springframework.security:spring-security-test'
 }
 
 compileKotlin {
