remove database properties, use yaml

--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,8 @@ dependencies {
     implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
-    runtimeOnly 'org.postgresql:postgresql'
+    runtimeOnly 'org.postgresql:postgresql' // COMMENT ON LOCALHOST
+//    runtimeOnly 'com.h2database:h2' // UNCOMMENT ON LOCALHOST
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 //    testImplementation 'org.springframework.security:spring-security-test'
 }
