--- a/build.gradle
+++ b/build.gradle
@@ -17,15 +17,19 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-//    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+
     implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
-    runtimeOnly 'org.postgresql:postgresql' // COMMENT ON LOCALHOST
-//    runtimeOnly 'com.h2database:h2' // UNCOMMENT ON LOCALHOST
+
+//    runtimeOnly 'org.postgresql:postgresql' // COMMENT ON LOCALHOST
+    runtimeOnly 'com.h2database:h2' // UNCOMMENT ON LOCALHOST
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-//    testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'org.springframework.security:spring-security-test'
 }
 
 compileKotlin {
